@@ -229,6 +229,10 @@ a:hover.yebg {
     background: #CCFF66;
 }
 
+.tableb_highlight {
+    background-color: #E0ECFF;
+}
+
 .tablef {
     background: #6BBE10;
     padding-top: 10px;
@@ -870,16 +874,6 @@ a.photoDown {
 }
 
 /** styles for album manager and photo album*/
-div#sort {  
-    margin: 0; 
-    padding: 11px ; 
-    height: 240px; 
-    overflow: auto; 
-    background: #FFF; 
-    border: 1px solid #0E72A4; 
-    border-top: none;
-    border-bottom: none;
-}
 .click {
     cursor:pointer;
 }
