@@ -229,6 +229,10 @@ a:hover {
     background: #666666;
 }
 
+.tableb_highlight {
+    background-color: #E0ECFF;
+}
+
 .tablef {
     background: #5D6976;
     padding-top: 10px;
@@ -893,16 +897,6 @@ a.photoDown {
 }
 
 /** styles for album manager and photo album*/
-div#sort {  
-    margin: 0; 
-    padding: 11px ; 
-    height: 240px; 
-    overflow: auto; 
-    background: #FFF; 
-    border: 1px solid #0E72A4; 
-    border-top: none;
-    border-bottom: none;
-}
 .click {
     cursor:pointer;
 }
