@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-08-04 [B] Fixed sloppy coding in album manager {GauGau}
 2009-08-03 [B] Fixed user manager pagination (thread ID 60871) {Nibbler}
 2009-07-29 [B] Removed unneeded <head>-section that caused 404 error for inline-help (thread ID 60847) {GauGau}
 2009-07-25 [D] Fixed reference to plugins folder (thread ID 60772) {GauGau}
